# discovery-mb2

./: 404.html  DOWNLOAD.html  explore.html  index.html  print.html  searcher-c2a407aa.js  searchindex-238ab9ff.js
.zed/: debug.json
01-background/: index.html
02-requirements/: index.html
03-setup/: IDE.html  index.html  linux.html  macos.html  verify.html  windows.html
04-meet-your-hardware/: index.html  microbit-v2.html  terminology.html
05-meet-your-software/: build-it.html  debug-it.html  embedded-setup.html  flash-it.html  index.html  light-it-up.html
06-hello-world/: board-support-crate.html  index.html  nop.html  portability.html  spin-wait.html  timers.html  toggle-it.html
07-led-roulette/: index.html  my-solution.html  the-challenge.html
08-inputs-and-outputs/: index.html  my-solution.html  polling-sucks.html  polling.html  the-challenge.html
09-registers/: bad-address.html  index.html  misoptimization.html  rtrm.html  spooky-action-at-a-distance.html  type-safe-manipulation.html
10-serial-port/: index.html  nix-tooling.html  rs-232.html  windows-tooling.html
11-uart/: echo-server.html  index.html  my-solution.html  naive-approach-write.html  receive-a-single-byte.html  reverse-a-string.html  send-a-single-byte.html  send-a-string.html
12-i2c/: index.html  lsm303agr.html  my-solution.html  read-a-single-register.html  the-challenge.html  the-general-protocol.html  using-a-driver.html
13-led-compass/: index.html  magnitude.html  my-solution.html  (+1 more)
mdbook/src/15-interrupts/: Cargo.toml
mdbook/src/15-interrupts/examples/: count-debounce.rs
(+35 files in other folders)
